# android_x264

./: H264Visa.rar  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/phubber/x264player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: example.c  native-lib.cpp
app/src/main/cpp/include/x264/: x264.h
app/src/main/java/com/phubber/x264player/: MainActivity.java  VideoUploadTask.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/phubber/x264player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
